testsuite/poke.pkl/offsets-diag-1.pk
/* { dg-do compile } */

type Foo = struct { int i @ 0#B; };

var o = 23#Foo; /* { dg-error "complete types" } */
